--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+Access-Control-Allow-Origin: "https://crudcrud.com/api/c98a96280df949e4b5cf10f93f7478e1"
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,12 +9,12 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="container">
-    
-    <div id="new-house" class="mt-4 p-5 text-black rounded" style="background-color:#d9d9d9;">
+    <div id="new-house" class="div-card">
         <h2>New Budget</h2>
         <input type="text" id="new-budget-name" class="form-control"> <br>
-        <button id="create-new-budget" class="btn btn-primary form-control">Create</button> 
+        <button id="create-new-budget" class="btn primary-button form-control">Create</button> 
     </div>
     
     <div id="app">
